convert to camelCase and fix radio spacing

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -28,7 +28,6 @@ h1 {
   letter-spacing: 4%;
   color: $primary-light;
   max-width: 70%;
-  margin-top: 3rem;
 }
 
 h2 {
@@ -43,6 +42,9 @@ p {
 }
 
 header {
+  height: 100vh;
+  display: flex;
+  align-items: center;
   label {
     font-size: 4rem;
     font-weight: 300;
@@ -177,7 +179,7 @@ section {
 
     .min,
     .max {
-      width: 40%;
+      width: 50%;
     }
 
     .max {
@@ -185,7 +187,7 @@ section {
     }
   }
 
-  .current-value {
+  .currentValue {
     width: 100%;
     text-align: center;
   }
@@ -221,7 +223,7 @@ section {
     margin-left: 3rem;
   }
 
-  .graph-contents {
+  .graphContents {
     background-color: $secondary-dark;
     width: calc(100% - 3rem);
     padding: 2rem 1rem;
@@ -235,6 +237,5 @@ section {
     width: 10%;
     height: 1%;
     background-color: $accent-color;
-    // transition: 2s ease-in-out;
   }
 }
